--- a/sass/layouts/_sections.scss
+++ b/sass/layouts/_sections.scss
@@ -93,11 +93,11 @@ section {
     }
 
     @media (min-width: 62em) {
-      background-position: center 150%;
+      background-position: center 107%;
       background-size: 94%;
       width: 120%;
       height: 122%;
-      left: 22%;
+      left: 28%;
     }
   }
 }
